*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,3 +1,5 @@
+lblCanBeRemoved=Can be removed?
+lblCanBeAltered=Can be modified?
 lblDriveLetter=Drive Letter
 lblMapsTo=Maps to
 lblDriveMappings=Drive Mappings
