--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,9 +1,11 @@
+lblCanBeRemoved=Kan worden verwijderd?
+lblCanBeAltered=Kan worden gewijzigd?
 msgEnterValueFor=Voer een waarde in voor: %1
 lblDriveLetter=Schijfstation
 lblMapsTo=Schijfstations Link
 lblDriveMappings=Schijfstation Links
 msgHelpAterField = Het veranderen van het type van een veld kan resulteren in het verlies van gegevens. Maak altijd eerst een backup van de data! 
-msgFieldCannotBeAltered = Dit veld kan niet worden gewijzigd. Het is, in zijn huidige staat, nodig om de juiste werking van Data Crow te kunnen garanderen.
+msgFieldCannotBeAltered = Dit veld kan niet worden gewijzigd.
 lblFileTypes=Bestandstypes
 lblAlterField=Veld Wijzigen
 msgTabDeleteNoRowSelected = Selecteer eerst een tab van de tabel
