*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,3 +1,5 @@
+lblRegexPattern=Apply the following regex pattern
+lblRemoveWords=Remove the following words
 lblCanBeRemoved=Can be removed?
 lblCanBeAltered=Can be modified?
 lblDriveLetter=Drive Letter
@@ -63,7 +65,7 @@ lblFileStructure = File Structure
 lblQuickSearchField = Quick Search 
 lblColumns = %1 Columns
 lblPasswordForUserX = You are about to change the password of user %1 with login name %2.
-lblTitleCleanup = Remove the following words from the title
+lblTitleCleanup = Title Cleaning
 lblMediaInfo = Media Information
 lblDirectoriesFiles = Directories / Files
 lblFileHashType = File hash type
