--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,3 +1,4 @@
+msgPatternError = The regex pattern you have entered is invalid: %1
 msgEnterValueFor = Please enter a value for: %1
 msgHelpAterField = Changing the type of a field might result in loss of data. Always make a backup before applying these changes!
 msgFieldCannotBeAltered = This field cannot be altered. Changing the type for this field would result in loss of data
