--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,6 @@
+msgPatternError = De regex code is incorrect: %1
+lblRegexPattern=Pas de volgende regex pattern toe
+lblRemoveWord=Verwijder de volgende woorden
 lblCanBeRemoved=Kan worden verwijderd?
 lblCanBeAltered=Kan worden gewijzigd?
 msgEnterValueFor=Voer een waarde in voor: %1
@@ -735,7 +738,7 @@ sysMusictrack_stateItem=Status
 tip15=Door gebruik te maken van de bestandsimport kunt u gemakkelijk uw films, muziek albums, software en ebooks toevoegen. De bestandsimport is een krachtige tool die informatie van het bestand met online informatie combineert.
 msgSQLTableHasBeenFilled=Het overzicht is gevuld
 lblUseDirAsAlbumName=Gebruik de directorie naam als de album naam
-lblTitleCleanup=Verwijder de volgende woorden van de titel
+lblTitleCleanup=Titel opschonen
 sysMusicalbumFieldGenres=Genres
 sysActorFieldName=Naam
 lblModuleRelateWizard=Module Relateer Wizard
