*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -138,7 +138,7 @@ lblMatchOnFilename = Match only on Filename
 lblMatchOnFilenameAndSize = Match on Filesize and Filename  
 lblUndoGrouping = Undo Grouping
 lblRestoreDatabase = Restore Database (items & images)
-lblRestoreReports = Restore Report Templates (XLS files)
+lblRestoreReports = Restore Report Templates (XSL files)
 lblRestoreModules = Restore Modules
 lblDecimalGroupingSymbol = Decimal Grouping Symbol
 lblDecimalSeperatorSymbol = Decimal Separator Symbol
