--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1032,7 +1032,7 @@ lblLocation=Lokatie
 sysPlatformPlural=Platformen
 sysActorFieldwebpage=Webpagina
 sysDirectorFieldPhoto=Foto
-lblRestoreReports=Rapporten terugzetten (XLS files)
+lblRestoreReports=Rapporten terugzetten (XSL files)
 lblExistingPatterns=Bestaande Patterns
 sysMusictrackFieldLyric=Tekst
 lblSelectionColor=Kleuren kiezen
