--- a/resources/German_resources.properties
+++ b/resources/German_resources.properties
@@ -1247,7 +1247,7 @@ sysSoftwareFieldRating=Bewertung
 lblDonate=Spenden
 0x0680=VME VMPCM
 0x0681=AT&T TPC
-lblRestoreReports=Stelle Berichts-Vorlagen wieder her (XLS Dateien)
+lblRestoreReports=Stelle Berichts-Vorlagen wieder her (XSL Dateien)
 sysMovie_storagemediumFieldName=Name
 lblTabNote=Blocknotiz
 msgAddingToTable=Füge %1 zur Tabelle mit neuen Elementen hinzu
