--- a/resources/Italian_resources.properties
+++ b/resources/Italian_resources.properties
@@ -1394,7 +1394,7 @@ msgNewLogUsed=Il file di log ha superato la dimensione limite di 1 MB ed è stat
 lblDonate=Donate
 0x0680=VME VMPCM
 0x0681=AT&T TPC
-lblRestoreReports=Ripristina modelli di report (file xls)
+lblRestoreReports=Ripristina modelli di report (file XSL)
 sysMovie_storagemediumFieldName=Nome
 tpHeaderValue=Inserire un'intestazione. Questa sarà mostrata su tutte le pagine
 lblTabNote=Blocco note
