*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcTips.properties
+++ b/_source/net/datacrow/core/resources/DcTips.properties
@@ -1,16 +1,18 @@
-tip1=You can define a default value for any field. Go to administration in the menubar and select templates. Here you can modify existing templates or create a new one. The default template will be used for all newly created items..
+tip1=You can define a default value for any field. Go to administration in the menubar and select templates. Here you can modify existing templates or create a new one. The default template will be used for all newly created items.
 tip2=The look and feel of Data Crow can be changed via the settings menu. Select the look &amp; feel menu item and select another look &amp; feel.
 tip3=You can change the font for labels and normal text in the settings menu.
 tip4=The "Update All" utility allows you to change a field (or multiple fields) to a new value quickly. Right-click on a view or navigate via the tools menu to "Update all".
 tip5=You don't have to type the information, you can use the "Online Search" to quickly find the item you want to add. You can update existing items by opening the item and selecting "Update".
 tip6=If you want to change one of the default states, categories or storage media or want to add a new one you should navigate to the administration menu. From there you can select the item you want to change.
 tip7=Missing a field? Go to the Field Settings via the settings menu. Way down in the field list you will find user definable fields which can be enabled and renamed.
-tip8=Change the order of the fields via the Field Settings (located in the settings menu). The order of the fields will applied in the whole of Data Crow.
+tip8=The item form, which is used to show an item, can be customized. You can add additional tabs and set the field and tab order. You can find this in the "Settings" menu, "Item Form Settings".
 tip9=The Help system can be activated via the F1 key.
 tip10=Double-click on large text fields to open the text editor.
 tip11=A right-click on input fields opens the edit menu. Via this menu you can undo and redo actions, select, cut and paste text fragments.
 tip12=Create your own module! Go to the modules menu and start the Create Module Wizard. Note that a manual has been written on this subject as well.
-tip13=The quick view can be edited to display the fields you want. Go to the settings menu and select the quick view settings option.
+tip13=The quick view can be edited to display the fields you want. Go to the settings menu and select the "Quick View Settings" option.
 tip14=The item wizard is a good place to start when you want to create a new item.
 tip15=Using the file import you can easily add your movies, software, music album, ebooks and so on. The file import is a powerful tool, combining information gathered by file parsers and information retrieved via online services.
 tip16=The mass update tool allows you to update all items current shown on screen using online services in one go.
+tip17=The "Alter Module" wizard can be used to change the existing fields of an module. For example you can change the "Category" field of the software module from a single reference field (dropdown) to a multi reference field.
+tip18=There are multiple views available. You can switch between views via the "View" menu. By default the card view is being used. This view probably delivers the nicest presentation. The table view however is very convenient when you want to have a customizable overview of your items. Additionally the table view allows you to edit the item(s) directly from the view window. Both views come with their own "View Settings" which can be found in the "Settings" menu.
