--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -434,7 +434,7 @@ lblFileFiler = %1 files
 lblIcon = Icon
 lblYes = Yes
 lblNo = No
-lblPicFileFilter = Images (JPeg/Gif/Bmp/Png)
+lblPicFileFilter = Images (JPeg/Gif/Bmp/Png/SVG)
 lblBckFileFilter = Data Crow backup file (bck)
 lblRemoveTrack = Remove Track
 lblAddChild = Add %1
