--- a/log4j.properties
+++ b/log4j.properties
@@ -1,7 +1,7 @@
 #
-#Tue Jun 02 09:53:52 CEST 2009
+#Wed Jun 17 14:29:14 CEST 2009
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.logfile.File=/D\:/development/projects/datacrow/data/data_crow.log
+log4j.appender.logfile.File=/H\:/DataCrow/projects/datacrow/data/data_crow.log
 log4j.rootLogger=info, textpane, logfile
 log4j.appender.logfile.layout.ConversionPattern=%5p [%t] (%F\:%L) - %m%n
 log4j.appender.textpane=net.datacrow.util.logging.TextPaneAppender
