--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1099,7 +1099,7 @@ lblFileStructure=Bestandsstructuur
 0x0099=Packed
 sysMusicalbumFieldCreated=Aangemaakt op
 sysPermissionItem=Permissie
-lblPicFileFilter=Afbeeldingen (JPeg/Gif/Bmp/Png)
+lblPicFileFilter=Afbeeldingen (JPeg/Gif/Bmp/Png/Svg)
 0x1500=Soundspace Music Compression
 sysMovieFieldFilehash=Bestandshash
 sysMusictrackFieldEncoding=Encodering
