--- a/resources/French_resources.properties
+++ b/resources/French_resources.properties
@@ -1217,7 +1217,7 @@ sysMusicalbumFieldCreated=Cree le
 0x0099=Packed
 sysPermissionItem=Permission
 lblBroadbandConnection=Optimiser pour le reseau (images de meilleure qualite)
-lblPicFileFilter=Images (JPeg/Gif/Bmp/Png)
+lblPicFileFilter=Images (JPeg/Gif/Bmp/Png/Svg)
 0x1500=Soundspace Music Compression
 sysMovieFieldFilehash=Hachage fichier
 lblTabNote=Bloc-notes
