--- a/resources/German_resources.properties
+++ b/resources/German_resources.properties
@@ -751,7 +751,7 @@ sysContainerFieldUserShortText2=User Short Text Field 2
 lblWhichPictureIsThis=Welches Bild ist das?
 lblExistingPatterns=Existierende Zeichenmuster
 sysImage_storagemediumFieldName=Name
-lblPicFileFilter=Bilder(JPeg/Gif/Bmp/Png)
+lblPicFileFilter=Bilder(JPeg/Gif/Bmp/Png/Svg)
 lblUndoSearch=Derzeitigen Filter rückgängig machen
 0x674f=Ogg Vorbis 1
 0x6750=Ogg Vorbis 2
