--- a/resources/Italian_resources.properties
+++ b/resources/Italian_resources.properties
@@ -838,7 +838,7 @@ sysContainerFieldUserShortText2=Campo testo corto 2
 lblWhichPictureIsThis=Che immagine è questa?
 lblExistingPatterns=Moduli esistenti
 sysImage_storagemediumFieldName=Nome
-lblPicFileFilter=Immagini (JPeg/Gif/Bmp/Png)
+lblPicFileFilter=Immagini (JPeg/Gif/Bmp/Png/Svg)
 lblUndoSearch=Annulla raggruppamento corrente
 0x674f=Ogg Vorbis 1
 0x6750=Ogg Vorbis 2
