*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,3 +1,4 @@
+lblMassUpdateUseOriginalSettings=Use original service settings
 lblRegexPattern=Apply the following regex pattern
 lblRemoveWords=Remove the following words
 lblCanBeRemoved=Can be removed?
