--- a/_source/net/datacrow/core/resources/DcTooltips.properties
+++ b/_source/net/datacrow/core/resources/DcTooltips.properties
@@ -1,3 +1,4 @@
+tpMassUpdateUseOriginalSettings=Use the original settings as stored in the item. Only items having service information set will be updated.
 tpButtonHeight = Sets the button height. This requires a restart of Data Crow to become effective.
 tpInputFieldHeight = Sets the input field height. This requires a restart of Data Crow to become effective.
 tpOnlineSearchQueryFullDetails = On the initial search it is not required to retrieve the full item detail, including images. To speed up the search it is recommended to disable this setting.
