*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,4 @@
+lblFileTreeSystem=System
 tpMassUpdateUseOriginalSettings=Gebruik de service instellingen zoals vastgelegd per item. Items die geen service informatie bevatten worden niet bijgewerkt.
 lblMassUpdateUseOriginalSettings=Gebruik de orginele service instellingen
 tip17=The "Module Aanpassen Wizard" kan worden gebruikt om bestaande velden aan te passen. Zu kunt u bijvoorbeeld het categorie veld van de Software module aanpassen van een enkel referentieveld naar een multi-referentieveld.
@@ -362,7 +363,7 @@ sysMovieFieldEpisodeName=Naam Aflevering
 sysSuperFieldCreated=Aangemaakt op
 sysMovieFieldCertification=Leeftijdscategorie
 sysBook_stateItemPlural=Statussen
-lblManageExistingFilters=Existing Filters
+lblManageExistingFilters=Bestaande Filters
 sysMusictrackFieldUserLongText1=Gebruikersveld - Text lang
 sysSoftware_state=Status
 sysBook_categoryFieldModified=Aangepast op
