*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,4 @@
+msgAddingXToTree=%1 wordt toegevoegd aan het Groepeer Paneel
 lblFileTreeSystem=System
 tpMassUpdateUseOriginalSettings=Gebruik de service instellingen zoals vastgelegd per item. Items die geen service informatie bevatten worden niet bijgewerkt.
 lblMassUpdateUseOriginalSettings=Gebruik de orginele service instellingen
