*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -508,7 +508,7 @@ lblHTTPSettings = HTTP Settings
 lblVerification = Verification
 lblDimension = Dimension
 lblGroupGeneral = General Settings
-lblGroupLocale = Locale Settings
+lblGroupRegional = Regional Settings
 lblCategoryForm = Categories
 lblOnlineUpdate = Update
 lblOnlineXSearch = Online %1 search
