*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1037,7 +1037,7 @@ sysDirectorFieldPhoto=Foto
 lblRestoreReports=Rapporten terugzetten (XSL files)
 lblExistingPatterns=Bestaande Patterns
 sysMusictrackFieldLyric=Tekst
-lblSelectionColor=Kleuren kiezen
+lblSelectionColor=Selectie Kleur
 msgScanningDriveX=Er wordt een scan gestart for schijf %1
 lblCharacterSet=Karakterset
 lblVerification=Verificatie
