*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,5 @@
+lblTableRowHeight=Tabel Rij Hoogte
+lblTreeNodeHeight=Tree Node Hoogte
 tip17=The "Module Aanpassen Wizard" kan worden gebruikt om bestaande velden aan te passen. Zu kunt u bijvoorbeeld het categorie veld van de Software module aanpassen van een enkel referentieveld naar een multi-referentieveld.
 tip18=Er zijn meerdere overzichten beschikbaar. U kunt een overzicht selecteren vanuit het "Overzicht" menu. Standaard wordt het "Kaart Overzicht" gebruikt. Dit overzicht is waarschijnlijk het fraaist. Het "Tabel Overzicht" is echter erg handig wanneer u behoefde heeft aan een aanpasbaar overzicht. Tevens staat dit overzicht u toe om de gegevens direct te bewerken. Beide overzichten hebben hun eigen "Overzichtsinstellingen" (te vinden in het "Instellingen" menu).
 tip8=U kunt de weergave van het item formulier aanpassen via de "Formulier Instellingen". Zo kunt u de tabs wijzigen (en zelfs nieuwe toevoegen) en de volgorde van de tabs en velden aanpassen.
