--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,3 +1,5 @@
+lblTableRowHeight=Table Row Height
+lblTreeNodeHeight=Tree Node Height
 lblFileTreeSystem=System
 lblMassUpdateUseOriginalSettings=Use original service settings
 lblRegexPattern=Apply the following regex pattern
