--- a/_source/net/datacrow/core/resources/DcTooltips.properties
+++ b/_source/net/datacrow/core/resources/DcTooltips.properties
@@ -1,6 +1,8 @@
 tpMassUpdateUseOriginalSettings=Use the original settings as stored in the item. Only items having service information set will be updated.
 tpButtonHeight = Sets the button height. This requires a restart of Data Crow to become effective.
 tpInputFieldHeight = Sets the input field height. This requires a restart of Data Crow to become effective.
+tpTableRowHeight = Sets the row height for all tables. This requires a restart of Data Crow to become effective.
+tpTreeNodeHeight = Sets the tree node height for all trees. This requires a restart of Data Crow to become effective.
 tpOnlineSearchQueryFullDetails = On the initial search it is not required to retrieve the full item detail, including images. To speed up the search it is recommended to disable this setting.
 tpDeleteModuleWizard = Starts the wizard to delete custom modules.
 tpAlterModuleWizard = Starts the wizard to alter existing modules.
