*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,3 +1,4 @@
+msgOutOfMemory = The application has run out of memory and cannot finish the task.
 msgAddingXToTree = Adding %1 to the grouping pane
 msgPatternError = The regex pattern you have entered is invalid: %1
 msgEnterValueFor = Please enter a value for: %1
