*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -320,7 +320,8 @@ lblSourceSelection = Select source file
 lblView = View
 lblTableView = Table View
 lblCardView = Card View
-lblFileImport = Migration Tool
+lblItemImportWizard = Item Import Wizard
+lblItemExportWizard = Item Export Wizard
 lblReturnItem = Return Item
 lblLoanHistory = Loan History
 lblAvailable = Available
