*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -27,6 +27,7 @@ msgCardPictureSelectionHelp = Here you can select the image that will be display
 msgDataSaved = Items have been saved
 msgFieldWithSameNameExists = A field with the same name already exists. Please enter a different name for this field.
 msgCouldNotDetermineVersion = Could not determine version. Please be aware of the upgrade paths: version 2.x should first be upgraded to version 3.0. Version 3.0 beta must also be upgraded to 3.0. All others can be upgraded with this version. Continue?
+msgOldVersion3.4.12 = This backup was made for an older version of Data Crow. You can only restore this on a version 3.4.13 Data Crow installation. Continue anyway?
 msgRestoreFinishedRestarting = The restore was successful. Data Crow will now exit.
 msgWebServerStarted = Web Server is running
 msgWebServerStopped = Web Server is down
