*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -142,7 +142,7 @@ msgNoThemesFound = No themes found on this system !
 msgCouldNotConvertToInt = Could not convert value [%1] to a digit for field %2
 msgNoFieldsFound = There are no fields defined! Please select a source file, press apply and map the source fields with the Data Crow fields!
 msgNoValuesFoundToImport = Could not find any values to import into Data Crow
-msgFileCannotBeUsed = The selected source file cannot be used
+msgFileCannotBeUsed = The selected file cannot be used
 msgDestinationInUse = The destination defined for %1 is already in use
 msgNoMappings = Please define at least one mapping 
 msgNotSameState = The loan status for the selected items differ. They can not be update all at once.
@@ -245,7 +245,7 @@ msgUnexpectedProblemDuringFileImport = An unexpected problem was encountered whi
 msgSettingsSavedUnapplied = The settings have been saved. They will become active after a restart
 msgNoInput = Please enter a query for execution in the input field
 msgQuestion = Question
-msgNoFileSelected = Please select a source file
+msgNoFileSelected = Please select a file
 msgFileCouldNotbeCreated = Only reading is allowed on the selected drive. File could not be created
 msgQueryWasSuccessFull = The update query/select/insert query was successful. No errors occurred. No data was retrieved
 msgQueryError = Error while executing the query: %1
