--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1366,7 +1366,7 @@ msgTitleRewriterExplanation=Herschijft alle titels. Bijvoorbeeld: wanneer "a" is
 msgSelectModuleToDelete=Selecteer de module die u wilt verwijderen. Alle items van deze module worden hiermee ook verwijderd. Deze actie kan niet ongedaan worden gemaakt. Het is aanbevolen om eerst een backup te maken.
 sysMediaFieldCreated=Aangemaakt op
 lblAbout=Over
-msgFileCannotBeUsed=Het geselecteerde bronbestand kan niet gebruikt worden
+msgFileCannotBeUsed=Het geselecteerde bestand kan niet gebruikt worden
 sysMusicartistFieldUserInteger1=Gebruikersveld - Numeriek 1
 msgLoadingUI=Het scherm wordt opgebouwd
 0x1400=Norris
@@ -1583,7 +1583,7 @@ sysSoftware_storagemediumItem=Opslagmedium
 lblReportFormat=Rapport formaat
 sysMovie_state=Status
 0x0021=Speech Compression's Sonarc
-msgNoFileSelected=Selecteer eerst een bronbestand
+msgNoFileSelected=Selecteer eerst een bestand
 sysMovieFieldUserInteger2=Gebruikersveld - Numeriek 2
 sysImage_storagemediumItem=Opslagmedium
 sysMovieFieldLabel=Label
