*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,3 +1,5 @@
+msgSelectModuleExport = Select the module of which you would like to export the items to file.
+msgSelectModuleImport = Select the module for which you would like to import items from file.
 msgOutOfMemory = The application has run out of memory and cannot finish the task.
 msgAddingXToTree = Adding %1 to the grouping pane
 msgPatternError = The regex pattern you have entered is invalid: %1
