*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,3 +1,10 @@
+msgSelectExportMethod = Select the way you want to export the items.
+msgSelectImportMethod = Select the type of import you want to perform.
+msgExportSettings = In this step you have to select the target file for the export. Furthermore you can indicate whether the images should be exported and, if so, if they should be scaled to a smaller size.
+msgExportProcess = The items are currently being exported based on the choices you have made in the previous steps.
+msgImportSettings = Select the file you want to import.
+msgImportProcess = The items are currently being imported. The items are not added to the new items tab but are immediately added to the database. 
+msgImportFieldMapping = The source fields need to be mapped to actual Data Crow fields. Select for each of the source fields a target in the table below. 
 msgSelectModuleExport = Select the module of which you would like to export the items to file.
 msgSelectModuleImport = Select the module for which you would like to import items from file.
 msgOutOfMemory = The application has run out of memory and cannot finish the task.
