--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,10 @@
+msgSelectExportMethod = Geef aan hoe de items geëxporteerd moeten worden.
+msgSelectImportMethod = Geef aan hoe de items geïmorteerd moeten worden.
+msgExportSettings = In deze stap moet het doel bestand worden geselecteerd. Daarnaast kan aangegeven worden of de plaatjes geëxporteerd moeten worden en of ze kleiner gemaakt moeten worden. 
+msgExportProcess = De items worden op dit moment geëxporteerd naar het doelbestand. 
+msgImportSettings = Selecteer het bronbestand voor de import.
+msgImportProcess =  De items worden op dit moment geïmporteerd vanuit het bronbestand. De items worden direct in de database opgeslagen.
+msgImportFieldMapping = De velden zoals gedinifieerd in het bronbestand moeten worden gelinkt naar de Data Crow velden. Selecteer in de tabel voor ieder bronveld een doelveld. 
 msgSelectModuleExport = Selecteer de module waarvan je de items wilt exporteren naar een bestand.
 msgSelectModuleImport = Selecteer de module waarvoor je items wilt importeren.
 msgOutOfMemory=De applicatie heeft onvoldoende geheugen tot haar beschikking om de taak te kunnen beëindigen.
