*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -377,8 +377,8 @@ lblLeft = left
 lblCenter = center
 lblReport = Report
 lblReportType = Report Type
-lblTextReport = Text report (tab-delimited)
-lblXmlReport = XML report
+lblTextExport = Text export (tab-delimited)
+lblXmlExport = XML export
 lblCreateReport = Create Report
 lblCreateIndex = Create index
 lblFontStyle = Font Style
