--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -230,7 +230,7 @@ msgCouldNotCreateCacheForPicture = Unable to create cached picture! Picture is d
 msgCouldNotLoadPicture = Could not load picture
 msgCouldNotClearCache = Could not clear the cache directory
 msgAddingToTable = Adding %1 to the new items tab
-msgAddingToReport = Adding %1 to the report
+msgExportingX = Exporting %1
 msgSelectFiles = Please select files to import
 msgSelectRowToOpen = Please select an item to open
 msgDeleteQuestion = Are you sure you want to permanently remove the selected items ?
