*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,12 @@
+msgSelectExportMethod = Geef aan hoe de items geëxporteerd moeten worden.
+msgSelectImportMethod = Geef aan hoe de items geimorteerd moeten worden.
+msgExportSettings = In deze stap moet het doel bestand worden geselecteerd. Daarnaast kan aangegeven worden of de plaatjes geëxporteerd moeten worden en of ze kleiner gemaakt moeten worden. 
+msgExportProcess = De items worden op dit moment geëxporteerd naar het doelbestand. 
+msgImportSettings = Selecteer het bronbestand voor de import. Voor sommige import methodes kan de karakterset ook nog worden aangegeven. Standaard staat deze op UTF8. Dit is correct voor de meeste gevallen. Het scheidingsteken (voor de waarden uit het bronbestand) hoeft ook niet alle gevallen aangeven te worden.  
+msgImportProcess =  De items worden op dit moment geimporteerd vanuit het bronbestand. De items worden direct in de database opgeslagen.
+msgImportFieldMapping = De velden zoals gedinifieerd in het bronbestand moeten worden gelinkt naar de Data Crow velden. Selecteer in de tabel voor ieder bronveld een doelveld. 
+msgSelectModuleExport = Selecteer de module waarvan je de items wilt exporteren naar een bestand.
+msgSelectModuleImport = Selecteer de module waarvoor je items wilt importeren.
 msgOutOfMemory=De applicatie heeft onvoldoende geheugen tot haar beschikking om de taak te kunnen beëindigen.
 tip17=The "Module Aanpassen Wizard" kan worden gebruikt om bestaande velden aan te passen. Zu kunt u bijvoorbeeld het categorie veld van de Software module aanpassen van een enkel referentieveld naar een multi-referentieveld.
 tip18=Er zijn meerdere overzichten beschikbaar. U kunt een overzicht selecteren vanuit het "Overzicht" menu. Standaard wordt het "Kaart Overzicht" gebruikt. Dit overzicht is waarschijnlijk het fraaist. Het "Tabel Overzicht" is echter erg handig wanneer u behoefde heeft aan een aanpasbaar overzicht. Tevens staat dit overzicht u toe om de gegevens direct te bewerken. Beide overzichten hebben hun eigen "Overzichtsinstellingen" (te vinden in het "Instellingen" menu).
