*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -162,7 +162,7 @@ sysBookFieldCreated=Aangemaakt op
 msgDestinationInUse=Het veld gedefinieerd voor %1 is al in gebruik
 0x0134=Sipro G729A
 0x0074=Voxware MetaVoice
-lblVisible=Visible ?
+lblVisible=Zichtbaar?
 sysBook_storagemediumItem=Opslagmedium
 sysDeveloperItemPlural=Ontwikkelaars
 0x0019=HP CU
@@ -944,7 +944,7 @@ lblMaxTextLength=Maximum Tekst Lengte
 sysBook_storagemediumItemPlural=Opslagmedia
 sysSoftwareFieldEAN=EAN
 msgThereAreOverdueItems=Er zijn items waarvan de uiterste reourdatum is verstreken
-lblField=Field
+lblField=Veld
 sysMovieFieldFps=Fps
 msgCouldNotDeleteModule=De module kan niet worden verwijdered of een van de gerelateerde modules kon niet worden bijgewerkt. De verwijderen is geannuleerd. %1
 sysSoftwarepublisherFieldUserShortText1=Gebruikersveld - Text kort 1
