*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,4 @@
+msgErrorWhileSettingValue = Kon waarde %1 niet invullen voor veld %2
 msgSelectExportMethod = Geef aan hoe de items geëxporteerd moeten worden.
 msgSelectImportMethod = Geef aan hoe de items geimorteerd moeten worden.
 msgExportSettings = In deze stap moet het doel bestand worden geselecteerd. Daarnaast kan aangegeven worden of de plaatjes geëxporteerd moeten worden en of ze kleiner gemaakt moeten worden. 
