--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,3 +1,4 @@
+msgErrorWhileSettingValue = Could not set value %1 for field %2
 msgSelectExportMethod = Select the way you want to export the items.
 msgSelectImportMethod = Select the type of import you want to perform.
 msgExportSettings = In this step you have to select the target file for the export. Furthermore you can indicate whether the images should be exported and, if so, if they should be scaled to a smaller size.
