*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,4 @@
+lblCustomLabel = Aangepaste Label
 msgErrorWhileSettingValue = Kon waarde %1 niet invullen voor veld %2
 msgSelectExportMethod = Geef aan hoe de items geëxporteerd moeten worden.
 msgSelectImportMethod = Geef aan hoe de items geimorteerd moeten worden.
