*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,3 +1,6 @@
+msgItemsCreated = Number of created items: %1
+msgItemsUpdated = Number of updated items: %1
+msgItemsImported = Total number of processed items: %1
 msgErrorWhileSettingValue = Could not set value %1 for field %2
 msgSelectExportMethod = Select the way you want to export the items.
 msgSelectImportMethod = Select the type of import you want to perform.
@@ -51,6 +54,7 @@ msgTableUpgradeMissingColumn = Table %1 needs to be upgraded. Missing column %2
 msgTableUpgradeIncorrectColumn = Table %1 needs to be upgraded. Column %2 is of the incorrect type size.
 msgImportFinished = Import has finished successfully!
 msgAddedX = Added %1
+msgImportedX = Imported %1
 msgDatabaseIsLocked = The database is currently locked. This is most likely because another instance of Data Crow is running in the background. Please restart Data Crow and try again.
 msgCannotDeleteThisUser = This user cannot be deleted as this is the only administrator user.
 msgLoginnameIsNotAllowedToChange = The Login name cannot be changed to a different value.
