*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,7 @@
+msgItemsCreated = Aantal nieuw aangemaakte items: %1
+msgItemsUpdated = Aantal bijgewerkte items: %1
+msgItemsImported = Totaal aantal verwerkte items: %1
+msgImportedX = %1 is geïmporteerd
 lblCustomLabel = Aangepaste Label
 msgErrorWhileSettingValue = Kon waarde %1 niet invullen voor veld %2
 msgSelectExportMethod = Geef aan hoe de items geëxporteerd moeten worden.
