*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,3 +1,5 @@
+msgNewVersion = Version %1 of Data Crow has been released. This version can be downloaded from %2. Additional information on this version can be found %3.<br><br>To upgrade first make a backup of your database, install the latest version of Data Crow and restore the backup in the new version. The backup utility is located in the tools menu. <br><br>To uninstall the old version simply delete the installation directory (Data Crow does not write files anywhere else, neither does it rely on the repository or other operating system specific locations). 
+msgVersionCheckOnStartup = Check for new versions on startup.
 msgItemsCreated = Number of created items: %1
 msgItemsUpdated = Number of updated items: %1
 msgItemsImported = Total number of processed items: %1
