*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,7 @@
+lblHere=hier
+lblVersionCheck=Versie controle
+msgNewVersion = Versie %1 van Data Crow is beschikbaar. Deze versie kan vanaf %2 worden gedownload. Meer informatie over deze versie kan %3 worden verkregen.<br><br>Maak allereerst een backup van uw gegevens met behulp van de Backup &amp; Restore functionaliteit (te vinden in het hulpmiddelen menu). Installeer daarna de nieuwe versie en zet de zojuist gemaakte backup terug.<br><br>De huidige installatie van Data Crow kan worden verwijderd door de installatie directorie van Data Crow te verwijderen. Er blijven dan geen bestanden achter aangezien Data Crow alleen bestanden schrijft naar deze folder en geen gebruik maakt van de registry (of andere platform afhankelijke locaties / middelen). 
+msgVersionCheckOnStartup = Controleer of er een nieuwe versie is tijdens het opstarten.
 msgItemsCreated = Aantal nieuw aangemaakte items: %1
 msgItemsUpdated = Aantal bijgewerkte items: %1
 msgItemsImported = Totaal aantal verwerkte items: %1
