*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1675,7 +1675,7 @@ lblStatus=Status
 sysMovieFieldAudioSampleRate=Audio Sample Ratio
 sysImageFieldFilehash=Bestandshash
 0x1002=OLICELP
-tip11=A right-click on input fields opens the edit menu. Via this menu you can undo and redo actions, select, cut and paste text fragments.
+tip11=Door rechts te klikken op een veld wordt het bewerken menu geopend. Via dit menu kunt u, onder andere, acties ongedaan maken, tekst kopieren en tekst invoegen.
 0x0011=Intel's DVI ADPCM
 sysImage_categoryItem=Categorie
 0x0151=Qualcom Halfrate
