*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -248,7 +248,7 @@ msgApplicationStarts = System is being started
 msgApplicationStops = Data Crow is gracefully shutting down.
 msgWritingItemCache = Writing item cache to disk.
 msgImportStarts = Starting the import
-msgImportStops = Import has finished. Find the results in the new items tab
+msgImportStops = The file information has been imported
 msgSynchronizerEnded = The synchronization has completed!
 msgDBCreated = No table found with the following name: %1. System will create a new table with this name.
 msgTableFound = Found the %1 table
