--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1440,7 +1440,7 @@ sysBook_categoryFieldID=ID
 lblRestoreModules=Modules terugzetten
 sysMovie_stateFieldItem=Item
 lblOpenItem=Open %1
-msgImportStops=Het importeren is voltooid. De resultaten zijn toegevoegd aan de nieuwe items tab.
+msgImportStops=Het importeren van de bestandsinformatie is voltooid
 lblLoan=Uitleen administratie
 sysAudiocdFieldCreated=Aangemaakt op
 sysPersonFieldEmail=Email
