--- a/homepage/version.properties
+++ b/homepage/version.properties
@@ -1,5 +1,5 @@
-version = 3.4.18
-comment = new maintenance release
+version = 3.4.19
+comment = small maintenance release
 download_url = http://www.datacrow.net/download.html
 information_url = http://www.datacrow.net/news.html
 type = p
