*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -133,6 +133,7 @@ lblPattern = Pattern
 lblExistingPatterns = Existing Patterns
 lblFileRenamer = File Renamer (%1) 
 lblExludeDirs = Excluded directories
+lblDirectoriesAsDrives = Directories as Drives
 lblDrivesToScan = Drives to scan
 lblPrecision = Matcher precision
 lblDriveManager = Drive Manager
