--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -81,6 +81,7 @@ msgNoRowSelectedToMove = No row selected. First select a row to move.
 msgFileSynchronizerHelp = The File Synchronizer checks for each item present in Data Crow if its file information is up to date. If the file information is out of date, because the file has been moved to another directory, the file information is updated. This all happens in the background meaning you can continue working with Data Crow while this task is executed.
 msgDriveScannerHelp = Scans each drives for its files. You can select which drives should be checked. To speed up the process (which will be running in the background) you can choose to exclude directories. The information retrieved is used by the File Synchronizer.  
 msgDrivePollerHelp = This tasks checks for new disc inserts. If a new drive is mounted it will start a drive scan for this drive.
+msgDirectoriesAsDrivesHelp = Directories listed below will be considered as 'drives' and will appear the same level as system drives throughout the application.
 msgSelectItemBeforeDelete = Please select an item to delete first.
 msgSelectDirToExclude = Select a directory to exclude
 msgJobStatus = %1 Status
