--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1796,3 +1796,5 @@ lblNoLF=Default van het systeem
 sysBookFieldVolumeNumber=Volume (nr)
 sysPersonFieldCity=Stad
 lblRestore=Terugzetten
+lblDirectoriesAsDrives = Directories as schijfstation
+msgDirectoriesAsDrivesHelp = De onderstaande directories worden beschouwd als schijfstations (in de gehele applicatie).
