--- a/resources/French_resources.properties
+++ b/resources/French_resources.properties
@@ -1,3 +1,5 @@
+lblDirectoriesAsDrives = Repertoires comme lecteurs
+msgDirectoriesAsDrivesHelp = Les repertoires ci-dessous seront consideres comme des lecteurs. Dans toute l'application ils apparaitront au meme niveau que les lecteurs du systeme.
 sysUserFieldName=Nom
 sysSoftwareFieldScreenshotThree=Capture d'ecran 3
 msgMassUpdateMethodHasNotBeenDefined=Merci de choisir entre Fournisseur d'informations en ligne ou traduction de fichiers (ou les deux)
