*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,3 +1,6 @@
+lblServerSettings = Server Specific Settings
+lblRetrieveEditorialReviews = Retrieve editorial reviews
+lblRetrieveUserReviews = Retrieve user reviews
 lblHere=here
 lblVersionCheck=Version Check
 lblCustomLabel=Custom Label
