*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,4 @@
+lblRetrieveFeatureListing = Haal de feature listing op van Amazon
 lblRetrieveEditorialReviews = Haal officiele reviews op (van de editor)
 lblRetrieveUserReviews = Haal gebruiker reviews op
 lblServerSettings = Server specifieke instellingen
