*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,4 @@
+lblSummary = Samenvatting
 sysUserFieldName=Naam
 sysSoftwareFieldScreenshotThree=Schermafbeelding 3
 msgMassUpdateMethodHasNotBeenDefined=Selecteer een online service en/of geef aan bestanden opnieuw te willen verwerken
