--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,3 +1,4 @@
+lblSummary = Summary
 lblRetrieveFeatureListing = Retrieve Amazon feature listing information
 lblServerSettings = Server Specific Settings
 lblRetrieveEditorialReviews = Retrieve editorial reviews
